syntax = "proto3";

package def.gateway;

option java_package = "com.game.gateway.proto";
option java_outer_classname = "MethodProtos";
option java_multiple_files = true;

// 接口列表
enum GATEWAY_METHODS {
    // 登录
    PASSPORT_CONNECT = 0;
    // 用户状态查询
}